k8s/namespaces/falco/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: falco
  namespace: falco
  labels:
    app.kubernetes.io/name: falco
    app.kubernetes.io/part-of: falco
spec:
  type: ClusterIP
  ports:
  - port: 8765
    targetPort: 8765
    protocol: TCP
  selector:
    app.kubernetes.io/name: falco
    app.kubernetes.io/part-of: falco
