k8s/namespaces/falco/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: falco
  labels:
    app.kubernetes.io/name: falco
    app.kubernetes.io/part-of: falco

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: falco
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
